# xmonad-alex

./: .gitignore  .gitmodules  emacs.org  install.sh  kanata.org  kmonad.org  terminal.org  xmonad.org  zsh.org
.dotfiles/: .alacritty.toml  .conkyrc  .tmux.conf  .wezterm.lua  .xmobarrc  .zprofile  terminal.org  zsh.org
.dotfiles/.config/conky/: clock.conf  extra.conf  quote.conf  system.conf
.dotfiles/.config/dunst/: dunstrc
.dotfiles/.config/eww/: eww.scss  eww.yuck
.dotfiles/.config/eww/popup_panel/: popup_panel.scss  popup_panel.yuck
.dotfiles/.config/eww/popup_panel/scripts/: backup.sh  brightness.sh  hotspot.sh  kanata.sh  kmonad.sh  update.sh  volume.sh  wifi.sh  zram.sh
.dotfiles/.config/kanata/: kanata-alex.kbd  kanata-alex.mouse
.dotfiles/.config/kmonad/: kmonad-alex.kbd
.dotfiles/.config/nvim/after/ftplugin/: tex.lua
.dotfiles/.config/nvim/lua/: plugins.lua
.dotfiles/.config/nvim/spell/: en.utf-8.add  en.utf-8.add.spl
.dotfiles/.config/picom/: picom.conf
.dotfiles/.config/redshift/: redshift.conf
.dotfiles/.config/rofi/implements/: fzathura.py  fzathura.sh
.dotfiles/.config/xmonad/: xmonad-alex.cabal  xmonad-alex.hs
.dotfiles/.config/zathura/: zathurarc
.dotfiles/.emacs.d/: early-init.el  emacs.org  init.el
.dotfiles/.zsh/: .zalias  .zkeys  .zshrc
.dotfiles/scripts/: backup.sh  conky.sh  cycle_layout.sh  game_launch_wrapper.sh  internal.patch  kanata-init.sh  kmonad-init.sh  mkaudir  nettoggle.sh  soundctrl.sh  toggle_eww_popup_panel.sh
DOCS/: LICENSE  README.md
helpers/: dummy.xinitrc  install-symlinks.sh  xinitrc.sh
(+2 files in other folders)
