cabal-version:      3.0

name:               xmonad-alex

-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0

synopsis:           XMonad dots for ArchLinux

license:            BSD-3-Clause
license-file:       LICENSE

author:             Alex Rosegrid
maintainer:         rosegrid58@gmail.com

category:           Window Manager
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable xmonad-alex
    -- Import common warning flags.
    import:           warnings

    main-is:          xmonad-alex.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    build-depends:    base
                    , xmonad
                    , xmonad-contrib
                    , containers
                    , text
                    , regex

    hs-source-dirs:   .

    default-language: Haskell2010
